Update Case layout issues
Update Case sidebar layout issues. Resolve old TODO comment
about "Toteutus" linking to the parent page. Open sidebar
links in new tabs.

--- a/helsinkioppii/static/css/digiedu.scss
+++ b/helsinkioppii/static/css/digiedu.scss
@@ -367,6 +367,11 @@ section.blog-lifts {
 
   dl dt {
     margin-bottom: 0;
+    margin-top: 12px;
+  }
+
+  dl dd {
+    margin-bottom: 0;
   }
 
   .case-meta--basics, .case-meta--tags, .case-meta--contact {
